# mesh

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CarbonMeshConfig.cmake  README.md  project_nameConfig.cmake  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cpp_format.yml
.teamcity/MacOS/: Project.kt
.teamcity/Windows/: Project.kt
.teamcity/_Self.kt/: Project.kt
.teamcity/_Self.kt/buildTypes/: CreateUniversalBuilds.kt  PublishToPerforce.kt
carbon-mesh-optimizer/: CMakeLists.txt
carbon-mesh-optimizer/src/: attributes.cpp  attributes.h  main.cpp  optimizer.cpp  optimizer.h  stdafx.h
carbon-mesh-optimizer/src/data/: cmfcontent.cpp  cmfcontent.h
carbon-mesh-viewer/: CMakeLists.txt  CarbonMeshViewer.rc  CarbonMeshViewerResource.h
carbon-mesh-viewer/scripts/: shaderCacheCreator.py
carbon-mesh-viewer/shaders/: facenormal.frag  flatcolor.frag  flatcolor.vert  geometryprepass.comp  model_packed_normal.vert  model_packed_normal_legacy.frag  model_packed_normal_legacy.vert  model_white.vert  normal.vert  oldpackednormal.vert  orientationgizmo.vert  packednormal.vert  simple.frag  test.frag  test.vert  test.vert.spv  wireframeoverlay.frag
carbon-mesh-viewer/src/: appState.cpp  appState.h  appState_template_impl.h  application.cpp  application.h  log.cpp  log.h  main.cpp  stdafx.h  viewerIcon.cpp  viewerIcon.h
carbon-mesh-viewer/src/data/: cmfcontent.cpp  cmfcontent.h  cmfdata.cpp  cmfdata.h
carbon-mesh-viewer/src/effect/: effect.cpp  effect.h
carbon-mesh-viewer/src/input/: inputhandler.cpp  inputhandler.h  mousestate.cpp  mousestate.h
carbon-mesh-viewer/src/model/: model.cpp  model.h
carbon-mesh-viewer/src/rendering/: camera.cpp  camera.h  modelRenderer.cpp  modelRenderer.h  orientationGizmoRenderer.cpp  orientationGizmoRenderer.h  renderer.cpp  renderer.h  renderingConsts.h  sceneRenderer.cpp  sceneRenderer.h  uiRenderer.cpp  uiRenderer.h  uiRenderer_template_impl.h
carbon-mesh-viewer/src/rendering/models/: axis.cpp  axis.h  bones.cpp  bones.h  boundingBox.cpp  boundingBox.h
carbon-mesh-viewer/src/rendering/renderable/: animationState.cpp  geometryprepass.cpp  geometryprepass.h  mesh.cpp  mesh.h  meshlod.cpp  meshlod.h  model.cpp  model.h  primitive.cpp  primitive.h
carbon-mesh-viewer/src/rendering/vulkan/: buffer.cpp  buffer.h  commandbuffer.cpp  commandbuffer.h  computeeffect.cpp  device.cpp  device.h  effect.cpp  effect.h  graphicseffect.cpp  graphicseffect.h  shadercache.cpp  shadercache.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  vulkanenums.cpp  vulkanenums.h  vulkanerrors.cpp  vulkanerrors.h
carbon-mesh-viewer/src/vulkan/: buffer.cpp  buffer.h  device.cpp  device.h  renderer.cpp  renderer.h  shadercache.cpp  shadercache.h  swapchain.cpp  swapchain.h  texture.cpp
cmake/: CarbonMeshConfig.cmake  CarbonMeshConfig.cmake.in  CcpBuildConfigurations.cmake  CcpDocsGenerator.cmake  CcpMonolithVendorConfig.cmake  CcpPackageConfigHelpers.cmake  CcpTargetConfigurations.cmake  PyTestDiscoverTests.cmake
cmake/internal/: PyTestDiscoverTestsImpl.cmake
cmake/toolchains/: arm64-carbon-osx.cmake  universal-carbon-osx.cmake  universal-osx-triplet.cmake  x64-carbon-osx.cmake
cmake/triplets/: arm64-osx-carbon.cmake  arm64-osx-debug.cmake  arm64-osx-internal.cmake  arm64-osx-release.cmake  arm64-osx-trinitydev.cmake  universal-osx-debug.cmake  universal-osx-internal.cmake  universal-osx-release.cmake  universal-osx-trinitydev.cmake  x64-osx-debug.cmake  x64-osx-internal.cmake  x64-osx-release.cmake  x64-osx-trinitydev.cmake  x64-windows-carbon.cmake  x64-windows-debug.cmake  x64-windows-internal.cmake  x64-windows-release.cmake  x64-windows-trinitydev.cmake
doc/source/: conf.py  index.rst  tools.rst
doc/source/cmf/: capi.rst  fbximport.rst  fileFormat.rst
doc/source/cmfprocessor/: cmfprocessor.rst  fbximport.rst
include/cmf/: animation.h  bounds.h  bufferstreams.h  bufferutils.h  cmf.h  compression.h  converters.h  declutils.h  memallocator.h  span.h  tangents.h  transforms.h  utils.h  uvdensity.h  v1.h  writer.h
src/: cmf.natvis  cmfgranny.cpp  main.cpp  memallocator.cpp  utils.cpp  writer.cpp
src/cmf/: animation.cpp  bounds.cpp  bufferutils.cpp  compression.cpp  declutils.cpp  memallocator.cpp  tangents.cpp  utils.cpp  uvdensity.cpp  writer.cpp
src/cmf/test/: CMakeLists.txt  animation.cpp  main.cpp  transforms.cpp  writer.cpp
src/fbximport/: CMakeLists.txt  animation.cpp  animation.h  lodsimplygon.cpp  main.cpp  mesh.cpp  mesh.h  options.cpp  options.h  skeleton.cpp  skeleton.h  transform.cpp  transform.h
src/processor/: CMakeLists.txt  cmffile.cpp  cmffile.h  commands.cpp  commands.h  decalbuffers.cpp  dumpjson.cpp  extractlod.cpp  generateaudioocclusion.cpp  generatelods.cpp  gltfconverter.cpp  hash.cpp  main.cpp  metadata.cpp  validate.cpp
src/processor/fbximport/: animation.cpp  animation.h  fbximport.cpp  lodsimplygon.cpp  lodsimplygon.h  mesh.cpp  mesh.h  options.cpp  options.h  skeleton.cpp  skeleton.h  transform.cpp  transform.h
src/viewer/: CMakeLists.txt  CarbonMeshViewer.rc  CarbonMeshViewerResource.h  app.cpp  app.h  appState.cpp  appState.h  appState_template_impl.h  application.cpp  application.h  inputhandler.cpp  inputhandler.h  log.cpp  log.h  main.cpp  rendercontext.cpp  rendercontext.h  stdafx.h  viewerIcon.cpp  viewerIcon.h
src/viewer/assets/shaders/: binormalaxis.vert  flatcolor.frag  geometryprepass.comp  model_color.frag  model_color.vert  model_face_normal.vert  model_normal.vert  model_packed_normal.vert  model_packed_normal_legacy.vert  normalaxis.vert  orientationgizmo.frag  packed_tangent.inc  packedtangentaxis.vert  packedtangentlegacyaxis.frag  packedtangentlegacyaxis.vert  (+2 more)
src/viewer/data/: cmfcontent.cpp  cmfcontent.h
src/viewer/rendering/: camera.cpp  camera.h  orientationGizmoRenderer.cpp  orientationGizmoRenderer.h  renderer.cpp  renderer.h  renderingConsts.h  sceneRenderer.cpp  sceneRenderer.h  uiDetailWindow.cpp  uiDetailWindow.h  uiRenderer.cpp  uiRenderer.h  uiRenderer_template_impl.h
src/viewer/scripts/: fontAwesomeCreator.py  shaderCacheCreator.py
(+54 files in other folders)
